--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="container-fluid">
-        <ul class="navbar-nav justify-content-end">
+        <ul class="navbar-nav justify-content-around">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
@@ -34,5 +34,10 @@
     </div>
   </nav>
 <!-- FIN NAV BAR -->
+<!-- INICIO FOOTER -->
+<footer>
+  <h6>© 2023 Daniel Allendes-Gallardo  |  Términos y Condiciones</h6>
+</footer>
+<!-- FIN FOOTER -->
 </body>
 </html>
