--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/cv.html">CV</a>
+            <a class="nav-link" href="#">CV</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Exposiciones</a>
@@ -37,6 +37,31 @@
     </div>
   </nav>
 <!-- FIN NAV BAR -->
+<!-- INICIO SECTION -->
+
+<div>
+    <h2>Resumen</h2>
+    <p>Daniel, es un artista visual titulado en la Escuela de Artes de la Universidad De Chile. Su trabajo se basa en la figura humana, centrándose en la anatomía. Se especializa en el arte tradicional de la pintura al óleo y acrílico, utilizando la ténica de aerografía. También ha explorado otras técnicas más modernas como el arte digital, ilustración y escultura 3d. Actualmente trabaja como artista freelance</p>
+</div>
+<section>
+    <h3>Formación</h3>
+    <ul>
+        <li>2009-2013: Grado académico Licenciado en Artes Visuales, mención Pintura Universidad de Chile, Santiago, Chile, 2015</li>
+        <li>2007-2008: Etapa básica de Bellas Artes Universidad De Chile</li>
+        <li>Enseñanza media Liceo José Victorino Lastarria</li>
+    </ul>
+</section>
+
+<section>
+    <h3>Experiencia</h3>
+    <ul>
+        <li>2010-2022: Artista independiente - Realizo comisiones de pintura en óleo y acrílico</li>
+        <li>2015-2018: Moja Kamerica Jefe de marca Venta online de accesorios fotográficos</li>
+        <li>2009-2015: Trabajador independiente - Importación y venta minorista de productos eletrónicos - Soporte técnico informático - Asesor computacional</li>
+        <li>Recepcionista: Consulta Médica DR Germán Huerta Tapia - Recepción de pacientes - Atención telefónica - Asignación de horas médicas - Venta de bono electrónico</li>
+    </ul>
+</section>
+<!-- FIN SECTION -->
 <!-- INICIO FOOTER -->
 <footer>
   <h6>© 2023 Daniel Allendes-Gallardo  |  Términos y Condiciones</h6>
