Agregando Expo y cambios

--- a/exposiciones.html
+++ b/exposiciones.html
@@ -38,6 +38,14 @@
     </div>
   </nav>
 <!-- FIN NAV BAR -->
+<section>
+    <ul>
+        <li>2018 - Muestra colectiva, Galería Fauna, Santiago de Chile.</li>
+        <li>2015 - Exposición "Antropomorfismo: Apropiación de la máscara", Universidad de Chile.</li>
+        <li>2012 - Exposición “Espacio Fassman”, Universidad De Chile.</li>
+        <li>2013 - Muestra colectiva audiovisual, Centro Cultural Chileno de las Artes (CCCHA), Santiago de Chile.</li>
+    </ul>
+</section>
 <!-- INICIO FOOTER -->
 <footer>
   <h6>© 2023 Daniel Allendes-Gallardo  |  Términos y Condiciones</h6>
