--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>document</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
             <a class="nav-link" href="#">CV</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Exposiciones</a>
+            <a class="nav-link" href="./exposiciones.html">Exposiciones</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Clientes</a>
@@ -37,8 +38,8 @@
     </div>
   </nav>
 <!-- FIN NAV BAR -->
-<!-- INICIO SECTION -->
 
+<!-- INICIO SECTION -->
 <div>
     <h2>Resumen</h2>
     <p>Daniel, es un artista visual titulado en la Escuela de Artes de la Universidad De Chile. Su trabajo se basa en la figura humana, centrándose en la anatomía. Se especializa en el arte tradicional de la pintura al óleo y acrílico, utilizando la ténica de aerografía. También ha explorado otras técnicas más modernas como el arte digital, ilustración y escultura 3d. Actualmente trabaja como artista freelance</p>
@@ -62,9 +63,13 @@
     </ul>
 </section>
 <!-- FIN SECTION -->
+
 <!-- INICIO FOOTER -->
 <footer>
   <h6>© 2023 Daniel Allendes-Gallardo  |  Términos y Condiciones</h6>
+  <i class="fa fa-facebook"></i>
+  <i class="fa fa-instagram"></i>
+  <i class="fa fa-behance"></i>
 </footer>
 <!-- FIN FOOTER -->
 </body>
