--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,40 @@
     </div>
   </nav>
 <!-- FIN NAV BAR -->
-<section>
-    <ul>
-        <li>2018 - Muestra colectiva, Galería Fauna, Santiago de Chile.</li>
-        <li>2015 - Exposición "Antropomorfismo: Apropiación de la máscara", Universidad de Chile.</li>
-        <li>2012 - Exposición “Espacio Fassman”, Universidad De Chile.</li>
-        <li>2013 - Muestra colectiva audiovisual, Centro Cultural Chileno de las Artes (CCCHA), Santiago de Chile.</li>
-    </ul>
-</section>
+
+<!-- INICIO FORMULARIO -->
+<div class="container mt-5 container formulario-color">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            
+                <div>
+                    <h4 class="text-center form_title mt-3">Si quieres cotizar una obra o tienes en mente un diseño, por favor completa los datos y escribe tu consulta.</h4>
+                </div>
+                <div class="card-body">
+                    <form action="#" method="post">
+                        <div class="form-group mb-3 mt-3">
+                            <label for="nombre" class="nombre">Nombre:</label>
+                            <input type="text" class="form-control" id="nombre" name="nombre" required placeholder="ingrese su nombre completo">
+                        </div>
+                        <div class="form-group mb-3 mt-3">
+                            <label for="email" class="email">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required placeholder="ingrese un mail válido">
+                        </div>
+                        <div class="mb-3 mt-3">
+                            <label for="comment">Comentario:</label>
+                            <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+                          </div>
+                        <div class="text-center my-3">
+                            <button  type="submit" class="btn btn-light" class="enviar">Enviar</button>
+                        </div>
+                    </form>
+                </div>
+            
+        </div>
+    </div>
+</div>
+<!-- FIN FORMULARIO -->
+
 <!-- INICIO FOOTER -->
 <footer>
   <h6>© 2023 Daniel Allendes-Gallardo  |  Términos y Condiciones</h6>
